--- a/package.json
+++ b/package.json
@@ -13,8 +13,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jest": "^24.0.6",
+    "@types/node": "^11.9.4",
+    "@types/react": "^16.8.4",
+    "@types/react-dom": "^16.8.2",
+    "@zeit/next-typescript": "^1.1.1",
     "next": "^8.0.1",
     "react": "^16.8.3",
-    "react-dom": "^16.8.3"
+    "react-dom": "^16.8.3",
+    "typescript": "^3.3.3333"
+  },
+  "devDependencies": {
+    "prettier": "^1.16.4"
   }
 }
