--- a/package.json
+++ b/package.json
@@ -17,14 +17,25 @@
   "author": "James Eby <james@freebyTech.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/enzyme": "^3.1.18",
+    "@types/enzyme-adapter-react-16": "^1.0.4",
     "@types/jest": "^24.0.6",
+    "@types/next": "^8.0.1",
     "@types/node": "^11.9.4",
     "@types/react": "^16.8.4",
     "@types/react-dom": "^16.8.2",
+    "@types/react-test-renderer": "^16.8.1",
     "@zeit/next-typescript": "^1.1.1",
+    "babel-jest": "^24.1.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.9.1",
+    "enzyme-to-json": "^3.3.5",
+    "jest": "^24.1.0",
     "next": "^8.0.1",
     "react": "^16.8.3",
+    "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.8.3",
+    "react-test-renderer": "^16.8.3",
     "typescript": "^3.3.3333"
   },
   "devDependencies": {
