--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,4 @@
 {
-    "presets": [
-      "next/babel",
-      "@zeit/next-typescript/babel"
-    ]
-  }
+  "presets": ["next/babel", "@zeit/next-typescript/babel"],
+  "plugins": [["@babel/plugin-proposal-decorators", { "legacy": true }]]
+}
