--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "James Eby <james@freebyTech.com>",
   "license": "MIT",
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.3.0",
     "@types/enzyme": "^3.1.18",
     "@types/enzyme-adapter-react-16": "^1.0.4",
     "@types/jest": "^24.0.6",
