--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react": "^16.8.4",
     "@types/react-dom": "^16.8.2",
     "@types/react-test-renderer": "^16.8.1",
+    "@types/styled-jsx": "^2.2.8",
     "@zeit/next-typescript": "^1.1.1",
     "babel-jest": "^24.1.0",
     "enzyme": "^3.9.0",
@@ -36,6 +37,7 @@
     "react": "^16.8.3",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.8.3",
+    "react-markdown": "^4.0.6",
     "react-test-renderer": "^16.8.3",
     "typescript": "^3.3.3333"
   },
