--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "license": "MIT",
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.3.0",
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
+    "@types/classnames": "^2.2.7",
     "@types/enzyme": "^3.1.18",
     "@types/enzyme-adapter-react-16": "^1.0.4",
     "@types/jest": "^24.0.6",
@@ -27,19 +30,23 @@
     "@types/react-dom": "^16.8.2",
     "@types/react-test-renderer": "^16.8.1",
     "@types/styled-jsx": "^2.2.8",
+    "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "babel-jest": "^24.1.0",
+    "dotenv-load": "^1.1.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.9.1",
     "enzyme-to-json": "^3.3.5",
     "jest": "^24.1.0",
     "next": "^8.0.1",
+    "next-env": "^1.1.0",
+    "perfect-scrollbar": "^1.4.0",
     "react": "^16.8.3",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.8.3",
-    "react-markdown": "^4.0.6",
     "react-test-renderer": "^16.8.3",
-    "typescript": "^3.3.3333"
+    "typescript": "^3.3.3333",
+    "webpack-bundle-analyzer": "^3.0.4"
   },
   "devDependencies": {
     "prettier": "^1.16.4",
