Added the most basic material-ui support.

--- a/package.json
+++ b/package.json
@@ -33,17 +33,19 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "babel-jest": "^24.1.0",
-    "dotenv-load": "^1.1.0",
+    "dotenv": "^6.2.0",
+    "dotenv-webpack": "^1.7.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.9.1",
     "enzyme-to-json": "^3.3.5",
     "jest": "^24.1.0",
+    "jss": "^9.8.7",
     "next": "^8.0.1",
-    "next-env": "^1.1.0",
     "perfect-scrollbar": "^1.4.0",
     "react": "^16.8.3",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.8.3",
+    "react-jss": "^8.1.0",
     "react-test-renderer": "^16.8.3",
     "typescript": "^3.3.3333",
     "webpack-bundle-analyzer": "^3.0.4"
